# grpcui

./: .gitignore  PROJECT_STRUCTURE.md  README.md
.github/workflows/: ci.yml
docs/: M0_BASELINE.md  grpc-gui-prd.md  implementation-plan.md  next-codex-handoff-2026-02-09.md  project-env-architecture.md  tech-architecture.md
scripts/: build-ffi.sh  build.sh  dev.sh
sidecar/: go.mod  go.sum  main.go
sidecar/ffi/: README.md  bridge.go  bridge_test.go  types.go
sidecar/internal/env/: resolver.go
sidecar/internal/grpc/: client.go
sidecar/internal/logger/: logger.go  logger_test.go
sidecar/internal/proto/: parser.go  parser_test.go
sidecar/internal/storage/: models.go  project_store.go  store.go  store_migration_test.go  store_project_test.go
sidecar/internal/tls/: manager.go
src/: .taurignore  bunfig.toml  index.html  package.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
src/coverage/: coverage-final.json  index.html
src/src/: App.tsx  index.css  main.tsx
src/src-tauri/: .taurignore  Cargo.toml  grpcui.db-shm  grpcui.db-wal  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/resources/: libgrpc_codec_bridge.h
src/src-tauri/src/: commands.rs  error.rs  main.rs  stream_manager.rs
src/src-tauri/src/ffi/: bridge.rs  error.rs  mod.rs
src/src-tauri/src/grpc/: client.rs  metadata.rs  mod.rs  streaming.rs  transport.rs
src/src-tauri/src/storage/: collections.rs  db.rs  environments.rs  error.rs  history.rs  mod.rs  models.rs  projects.rs  tests.rs
src/src-tauri/tests/: grpc_unary_test.rs
src/src/hooks/: index.ts  (+3 more)
src/tests/: setup.ts
tests/: setup.e2e.ts
tests/e2e/: invoke.test.ts  storage.test.ts  streaming.test.ts
tests/mocks/: echo-server.go  go.mod  grpc-server.ts
(+70 files in other folders)
