[package]
name = "grpcui"
version = "0.1.0"
description = "A modern desktop gRPC testing tool"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
async-stream = "0.3"
libloading = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# SQLite storage
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
tempfile = "3"

# gRPC dependencies
tonic = { version = "0.12", features = ["tls", "tls-native-roots", "tls-webpki-roots"] }
prost = "0.13"
tower = "0.5"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
pin-project = "1"
async-trait = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Optimize for release builds
[profile.release]
# Strip symbols for smaller binary
strip = true
# Optimize for size
opt-level = "s"
# Enable LTO for better optimization
lto = true
# Reduce codegen units for better optimization
codegen-units = 1
# Panic abort for smaller binary
panic = "abort"

[profile.release.build-override]
opt-level = 3

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
